<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/small_dimen">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/user_overview_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/icon_margin"
                android:contentDescription="@string/user_icon" />

            <TextView
                android:id="@+id/login_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/icon_margin"
                android:layout_toEndOf="@id/user_overview_icon"
                android:lines="1"
                android:textAppearance="@style/ListTitle"
                tools:text="Moonlight" />

            <TextView
                android:id="@+id/url_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_overview"
                android:layout_toEndOf="@id/user_overview_icon"
                android:lines="1"
                android:textAppearance="@style/ListSubtitle"
                tools:text="api.github.com/users/moonlight" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/message_about_reps_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/common_lower_dimen"
        android:textAppearance="@style/ListSubtitle"
        tools:text="List of Moonlight repositories:" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ListView
            android:id="@+id/list_view_overview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/repo_list_item" />

        <ProgressBar
            android:id="@+id/progress_bar_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <LinearLayout
            android:id="@+id/layout_error_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/no_network_icon"
                android:gravity="center"
                android:padding="@dimen/warning_padding"
                android:text="@string/error_unable_to_load_repo"
                android:textAppearance="@style/ListTitle" />

            <Button
                android:id="@+id/try_again_button_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_try_again" />

        </LinearLayout>


    </FrameLayout>


</LinearLayout>